manifest/deployment-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-webhook
  namespace: default
spec:
  selector:
    app: example-webhook
  ports:
    - port: 443
      targetPort: tls
      name: application
    - port: 80
      targetPort: metrics
      name: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-webhook
  namespace: default
  labels:
    app: example-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-webhook
  template:
    metadata:
      labels:
        app: example-webhook
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: example-webhook
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: webhook
        image: "webhook:local"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9443
          name: tls
        - containerPort: 8080
          name: metric
        - containerPort: 8081
          name: probe
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /etc/webhook/certs/
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: example-webhook-tls
