manifest/validation-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: example-webhook
webhooks:
  - name: example-webhook.default.svc.cluster.local
    admissionReviewVersions:
      - "v1"
    sideEffects: "None"
    timeoutSeconds: 30
    # objectSelector:
    #   matchLabels:
    #     example-webhook-enabled: "true"
    clientConfig:
      service:
        name: example-webhook
        namespace: default
        path: "/validate--v1-secret"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURjRENDQWxpZ0F3SUJBZ0lVU25uSmVFaWpOb1R3bncwaDc4bVIySE5velBZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VERUxNQWtHQTFVRUJoTUNVRXd4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RURBT0JnTlZCQWNUQjFkaApjbk5oZDJFeEVEQU9CZ05WQkFvVEIwVjRZVzF3YkdVeEN6QUpCZ05WQkFzVEFrTkJNQjRYRFRJek1ETXpNVEEyCk5USXdNRm9YRFRJNE1ETXlPVEEyTlRJd01Gb3dVREVMTUFrR0ExVUVCaE1DVUV3eEVEQU9CZ05WQkFnVEIwVjQKWVcxd2JHVXhFREFPQmdOVkJBY1RCMWRoY25OaGQyRXhFREFPQmdOVkJBb1RCMFY0WVcxd2JHVXhDekFKQmdOVgpCQXNUQWtOQk1 [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["secrets"]
        scope: "Namespaced"
